# json-editor

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: build-images.mjs  patch-dmg.mjs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  menu.rs
src/lib/components/: DiffView.svelte  Editor.svelte  LangPicker.svelte  PreferencesDialog.svelte  QueryBar.svelte  ResultPane.svelte  StatusBar.svelte  TabBar.svelte  Toolbar.svelte  TreeView.svelte
src/lib/json/: path.ts
src/lib/lang/: index.ts  json.ts  locate.ts  schema.ts  toml.ts  types.ts  yaml.ts
src/lib/query/: jq.ts  jsonpath.ts
src/lib/stores/: recents.svelte.ts  settings.svelte.ts  tabs.svelte.ts
src/lib/util/: disambiguate.ts  shortcuts.ts  theme.ts
src/routes/: +page.svelte
