[package]
name = "json-editor"
version = "0.1.1"
description = "A fast, native JSON · YAML · TOML viewer and editor"
authors = ["Shaked Z"]
edition = "2021"

[lib]
name = "json_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
